--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,70 +59,57 @@ table {
 
 .line {
 	position: relative;
-	background-color: #000; 
+	border: 1px solid #a4a4a4;
 	margin-left: calc(98.8vw/5);
 	margin-right: calc(98.8vw/5);
 	margin-bottom: calc(98.8vw/70);
 }
 
-.back-list {
-	position: absolute;
-}
-
-.back-list li {
-	position: relative;
-	float: left;
-	width: calc(98.8vw/8);
-	height: calc(110vh/5);
-}
-
-.back-list li:hover {
-	background: #212121;
-	-webkit-transition: all 0.2s;
-    transition: all 0.2s;
-}
-
 .intro {
 	position: relative;
 	width: 100%;
-	min-height: 110vh;
-	background: #191919;
+	min-height: 100vh;
+	background: url('../img/back.svg');
+	background-repeat: no-repeat;
+	background-size: cover;
+
 }
 
 .intro .desc {
 	position: absolute;
-	top: 20vh;
-	left: 5%;
-	right: 5%;
-	max-width: 90%;
+	top: 10vh;
+	left: 10vw;
+	max-width: calc(100vh/2.4);
 }
 
 .intro .desc .event-name {
-	font-family: 'Acme', sans-serif;
+	font-family: 'Roboto', sans-serif;
 	color: #f5f5f5;
-	font-size: calc(100vh/8);
-	text-align: center;
+	font-size: calc(100vh/10);
+	text-align: justify;
+}
+
+.intro .desc em {
+	font-weight: bolder;
 }
 
 .intro .desc .event-desc {
 	font-family: 'Roboto', sans-serif;
-	color: #bdbdbd;
+	color: #f5f5f5;
 	font-size: calc(100vh/20);
-	text-align: center;
 }
 
 .intro .desc .event-info {
-	font-family: 'Acme', sans-serif;
+	font-family: 'Roboto', sans-serif;
 	color: #f5f5f5;
-	font-size: calc(100vh/16);
-	text-align: center;
+	font-size: calc(100vh/22);
 }
 
 .schedule {
 	position: relative;
 	width: 100%;
-	background: #343434;
-	color: #f5f5f5;
+	background: #fdfdfd;
+	color: #212121;
 }
 
 .schedule .desc h1 {
@@ -186,8 +173,8 @@ table {
 .course {
 	position: relative;
 	width: 100%;
-	background: #f5f5f5;
-	color: #212121;
+	background: #212121;
+	color: #f5f5f5;
 }
 
 .course .desc {
@@ -260,10 +247,18 @@ table {
 	padding: 10px;
 }
 
-.apoio img {
+.apoio .img-ufpi {
 	position: relative;
-	width: 60%;
-	margin-left: 20%;
-	margin-right: 20%; 
+	width: 25%;
+	margin-left: 37.5%;
+	margin-right: 37.5%;
+	padding-bottom: 50px; 
+}
+
+.apoio .img-factos {
+	position: relative;
+	width: 40%;
+	margin-left: 30%;
+	margin-right: 30%;
 	padding-bottom: 50px; 
 }
