--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,26 +228,51 @@ table {
 }
 
 .speakers .capt {
-	font-size: calc(100vh/45);
+	font-size: calc(100vh/30);
 	max-width: 450px;
 	padding-bottom: 20px; 
 }
 
-.apoio {
+.subscribe {
+	position: relative;
+	margin-left: 20%;
+	margin-right: 20%;
+	margin-bottom: 80px;
+}
+
+.subscribe a {
+	position: absolute;
+	padding: 16px;
+	width: 100%;
+	font-family: 'Acme', sans-serif;
+	font-size: calc(100vh/20);
+	text-align: center;
+	text-decoration: none;
+	background: #212121;
+	color: #f5f5f5;
+}
+
+.subscribe a:hover {
+	text-decoration: none;
+	background: #121212;
+	color: #f5f5f5;
+}
+
+.support {
 	position: relative;
 	width: 100%;
 	background: #212121;
 	color: #f5f5f5;
 }
 
-.apoio .desc h1 {
+.support .desc h1 {
 	font-size: calc(100vh/10);
 	font-family: 'Acme', sans-serif;
 	text-align: center;
 	padding: 10px;
 }
 
-.apoio .img-ufpi {
+.support .img-ufpi {
 	position: relative;
 	width: 25%;
 	margin-left: 37.5%;
@@ -255,7 +280,7 @@ table {
 	padding-bottom: 50px; 
 }
 
-.apoio .img-factos {
+.support .img-factos {
 	position: relative;
 	width: 40%;
 	margin-left: 30%;
